--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^8.28.0",
     "dompurify": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
